Update visuals, add animations, and fix spacing of sections and items

--- a/css/default.css
+++ b/css/default.css
@@ -5,6 +5,7 @@ body {
 
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 img {
@@ -16,6 +17,90 @@ img {
 
 a {
     text-decoration: none;
+}
+
+.item-grid {
+    animation-name: drop;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    position: relative;
+    opacity: 0;
+}
+
+@keyframes drop {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.item-grid:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.item-grid:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.item-grid:nth-child(3) {
+    animation-delay: 1s;
+}
+
+.item-grid:nth-child(4) {
+    animation-delay: 1.5s;
+}
+
+.item-grid:nth-child(5) {
+    animation-delay: 2s;
+}
+
+.item-grid:nth-child(6) {
+    animation-delay: 2.5s;
+}
+
+.item-grid:nth-child(7) {
+    animation-delay: 3s;
+}
+
+.pricing-item {
+    animation-name: drop;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    position: relative;
+    opacity: 0;
+}
+
+@keyframes drop {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.pricing-item:nth-child(1) {
+    animation-delay: 1s;
+}
+
+.pricing-item:nth-child(2) {
+    animation-delay: 1s;
+}
+
+.pricing-item:nth-child(3) {
+    animation-delay: 2s;
+}
+
+.pricing-item:nth-child(4) {
+    animation-delay: 2s;
 }
 
 .img {
@@ -35,4 +120,6 @@ a {
     max-width: 200px;
 }
 
-.container { margin: 0 5%; }
+.container {
+    margin: 0 5%;
+}
