--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ nav .navbar {
     width: 100%;
     transition: ease-in-out 0.3s;
     color: #666;
-   
+
 }
 
 .nav-link a {
@@ -117,7 +117,7 @@ nav .navbar {
     margin-top: 100px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    gap: 160px;
+
 }
 
 .website-info {
@@ -169,6 +169,8 @@ nav .navbar {
     width: 600px;
     grid-template-columns: repeat(3, minmax(20px, 1fr));
     grid-template-rows: repeat(3, minmax(150px, 1fr));
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .icon {
@@ -328,7 +330,7 @@ nav .navbar {
     display: flex;
     background-color: rgba(102, 148, 222, 0.104);
     padding-top: 150px;
-
+    justify-content: space-between;
 }
 
 .software-plp .des-1 {
@@ -429,30 +431,31 @@ nav .navbar {
     position: absolute;
     z-index: 100;
     border-radius: 50%;
-    left: 45%;
-    right: auto;
+    left: 50%;
     font-size: 50px;
     background-color: white;
     box-shadow: 0px 0px 5px 0px;
-    top: 45%;
+    top: 50%;
     width: 70px;
     height: 70px;
     text-align: center;
-    padding: 10px;
-    bottom: auto;
     border: none;
+    transform: translate(-50%, -50%);
     color: black;
 }
 
 .play-btn {
     font-size: 24px;
-    position: relative;
-    left: 2px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     color: black;
     bottom: 10px;
     background: none;
     border: none;
     cursor: pointer;
+    padding: 0;
 }
 
 .about-employee {
@@ -551,6 +554,7 @@ nav .navbar {
 
 .pricing-chart {
     display: flex;
+    justify-content: space-around;
 }
 
 .price-card {
@@ -823,6 +827,7 @@ nav .navbar {
 
 .top-footer {
     display: flex;
+    justify-content: space-around;
 }
 
 .top-footer .col {
@@ -832,7 +837,7 @@ nav .navbar {
 .top-footer .front-logo {
     max-width: 200px;
     margin-bottom: 30px;
-} 
+}
 
 .top-footer h2 {
     font-size: 30px;
